--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate:dev": "knex migrate:latest",
     "rollback:dev": "knex migrate:rollback",
     "seed:dev": "knex seed:run",
+    "resetdb:dev": "knex migrate:rollback && knex migrate:latest && knex seed:run",
     "migrate:prod": "heroku run knex migrate:latest -a bwsecretfamilyrecipes",
     "rollback:prod": "heroku run knex migrate:rollback -a bwsecretfamilyrecipes",
     "database:prod": "heroku pg:psql -a bwsecretfamilyrecipes",
